; ModuleID = '/home/carl/AnghaBench/libuv/src/win/extr_pipe.c_uv_stdio_pipe_server.c'
source_filename = "/home/carl/AnghaBench/libuv/src/win/extr_pipe.c_uv_stdio_pipe_server.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_7__ = type { i32 }
%struct.TYPE_6__ = type { i64 }

@FILE_FLAG_OVERLAPPED = common dso_local global i32 0, align 4
@FILE_FLAG_FIRST_PIPE_INSTANCE = common dso_local global i32 0, align 4
@WRITE_DAC = common dso_local global i32 0, align 4
@PIPE_TYPE_BYTE = common dso_local global i32 0, align 4
@PIPE_READMODE_BYTE = common dso_local global i32 0, align 4
@PIPE_WAIT = common dso_local global i32 0, align 4
@INVALID_HANDLE_VALUE = common dso_local global i64 0, align 8
@ERROR_PIPE_BUSY = common dso_local global i32 0, align 4
@ERROR_ACCESS_DENIED = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @uv_stdio_pipe_server(%struct.TYPE_7__* %0, %struct.TYPE_6__* %1, i32 %2, i8* %3, i64 %4) #0 {
  %6 = alloca i32, align 4
  %7 = alloca %struct.TYPE_7__*, align 8
  %8 = alloca %struct.TYPE_6__*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i8*, align 8
  %11 = alloca i64, align 8
  %12 = alloca i64, align 8
  %13 = alloca i32, align 4
  %14 = alloca i8*, align 8
  store %struct.TYPE_7__* %0, %struct.TYPE_7__** %7, align 8
  store %struct.TYPE_6__* %1, %struct.TYPE_6__** %8, align 8
  store i32 %2, i32* %9, align 4
  store i8* %3, i8** %10, align 8
  store i64 %4, i64* %11, align 8
  %15 = load %struct.TYPE_6__*, %struct.TYPE_6__** %8, align 8
  %16 = bitcast %struct.TYPE_6__* %15 to i8*
  store i8* %16, i8** %14, align 8
  br label %17

17:                                               ; preds = %50, %5
  %18 = load i8*, i8** %14, align 8
  %19 = load i8*, i8** %10, align 8
  %20 = load i64, i64* %11, align 8
  %21 = call i32 @uv_unique_pipe_name(i8* %18, i8* %19, i64 %20)
  %22 = load i8*, i8** %10, align 8
  %23 = load i32, i32* %9, align 4
  %24 = load i32, i32* @FILE_FLAG_OVERLAPPED, align 4
  %25 = or i32 %23, %24
  %26 = load i32, i32* @FILE_FLAG_FIRST_PIPE_INSTANCE, align 4
  %27 = or i32 %25, %26
  %28 = load i32, i32* @WRITE_DAC, align 4
  %29 = or i32 %27, %28
  %30 = load i32, i32* @PIPE_TYPE_BYTE, align 4
  %31 = load i32, i32* @PIPE_READMODE_BYTE, align 4
  %32 = or i32 %30, %31
  %33 = load i32, i32* @PIPE_WAIT, align 4
  %34 = or i32 %32, %33
  %35 = call i64 @CreateNamedPipeA(i8* %22, i32 %29, i32 %34, i32 1, i32 65536, i32 65536, i32 0, i32* null)
  store i64 %35, i64* %12, align 8
  %36 = load i64, i64* %12, align 8
  %37 = load i64, i64* @INVALID_HANDLE_VALUE, align 8
  %38 = icmp ne i64 %36, %37
  br i1 %38, label %39, label %40

39:                                               ; preds = %17
  br label %53

40:                                               ; preds = %17
  %41 = call i32 (...) @GetLastError()
  store i32 %41, i32* %13, align 4
  %42 = load i32, i32* %13, align 4
  %43 = load i32, i32* @ERROR_PIPE_BUSY, align 4
  %44 = icmp ne i32 %42, %43
  br i1 %44, label %45, label %50

45:                                               ; preds = %40
  %46 = load i32, i32* %13, align 4
  %47 = load i32, i32* @ERROR_ACCESS_DENIED, align 4
  %48 = icmp ne i32 %46, %47
  br i1 %48, label %49, label %50

49:                                               ; preds = %45
  br label %70

50:                                               ; preds = %45, %40
  %51 = load i8*, i8** %14, align 8
  %52 = getelementptr inbounds i8, i8* %51, i32 1
  store i8* %52, i8** %14, align 8
  br label %17

53:                                               ; preds = %39
  %54 = load i64, i64* %12, align 8
  %55 = load %struct.TYPE_7__*, %struct.TYPE_7__** %7, align 8
  %56 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %55, i32 0, i32 0
  %57 = load i32, i32* %56, align 4
  %58 = load %struct.TYPE_6__*, %struct.TYPE_6__** %8, align 8
  %59 = ptrtoint %struct.TYPE_6__* %58 to i32
  %60 = call i32* @CreateIoCompletionPort(i64 %54, i32 %57, i32 %59, i32 0)
  %61 = icmp eq i32* %60, null
  br i1 %61, label %62, label %64

62:                                               ; preds = %53
  %63 = call i32 (...) @GetLastError()
  store i32 %63, i32* %13, align 4
  br label %70

64:                                               ; preds = %53
  %65 = load %struct.TYPE_6__*, %struct.TYPE_6__** %8, align 8
  %66 = call i32 @uv_pipe_connection_init(%struct.TYPE_6__* %65)
  %67 = load i64, i64* %12, align 8
  %68 = load %struct.TYPE_6__*, %struct.TYPE_6__** %8, align 8
  %69 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %68, i32 0, i32 0
  store i64 %67, i64* %69, align 8
  store i32 0, i32* %6, align 4
  br label %79

70:                                               ; preds = %62, %49
  %71 = load i64, i64* %12, align 8
  %72 = load i64, i64* @INVALID_HANDLE_VALUE, align 8
  %73 = icmp ne i64 %71, %72
  br i1 %73, label %74, label %77

74:                                               ; preds = %70
  %75 = load i64, i64* %12, align 8
  %76 = call i32 @CloseHandle(i64 %75)
  br label %77

77:                                               ; preds = %74, %70
  %78 = load i32, i32* %13, align 4
  store i32 %78, i32* %6, align 4
  br label %79

79:                                               ; preds = %77, %64
  %80 = load i32, i32* %6, align 4
  ret i32 %80
}

declare dso_local i32 @uv_unique_pipe_name(i8*, i8*, i64) #1

declare dso_local i64 @CreateNamedPipeA(i8*, i32, i32, i32, i32, i32, i32, i32*) #1

declare dso_local i32 @GetLastError(...) #1

declare dso_local i32* @CreateIoCompletionPort(i64, i32, i32, i32) #1

declare dso_local i32 @uv_pipe_connection_init(%struct.TYPE_6__*) #1

declare dso_local i32 @CloseHandle(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
